修正小螢幕會顯示大的卡片

--- a/name-card.html
+++ b/name-card.html
@@ -50,7 +50,7 @@
   </head>
   <body>
     <!-- 大 -->
-    <div class="container mt-5 w-75 border shadow-sm bg-white d-flex position-relative d-sm-none d-md-block">
+    <div class="container mt-5 w-75 border shadow-sm bg-white d-flex position-relative d-sm-none d-md-block d-none">
       <div class="position-absolute">
         <img src="logo.png"/>
       </div>
